# timeoff-scheduler-or-tutorial

./: README.md  pyproject.toml  requirements.txt  setup.py  tutorial-demo.ipynb
datasets/: 2025_public_holidays_Berlin.csv  2025_public_holidays_Munich.csv  2026_public_holidays_Berlin.csv  2026_public_holidays_Munich.csv
notebooks/: holiday_planning_small_ex.lp  sandbox.ipynb  tutorial-demo.ipynb  tutorial-solution.ipynb  tutorial.ipynb
notebooks/archive/: tutorial-blank.ipynb
src/: config.py
src/mdl/: period.py
src/plotting/: calendar.py
src/utils/: calculators.py  data_loader.py  enums.py  time.py
