[project]
name = "timeoff-scheduler"
version = "0.2.0"
description = "Holiday scheduling using mathemical optimization"
requires-python = ">=3.11"
dependencies = [
    "pulp>=2.9.0",
    "pandas>=2.2.2",
    "calplot>=0.1.7.5",
    "matplotlib>=3.9.2",
    "plotly>=5.22.0",
]

[project.optional-dependencies]
dev = [
    "jupyter",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
